# banditry

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  environment.yml  index.html  labels.py  logging_utils.py  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
agents/: agent.py  factory.py  ofugpagent.py  tsagent.py
api/agents/: index.html
api/optimisation/: index.html
api/sampling-oracles/: index.html
api/surrogates/: index.html
api/variable-domains/: index.html
benchmarks/: index.html
changelog/: index.html
docs/: benchmarks.md  getting-started.md  index.md
docs/api/: agents.md  optimisation.md  sampling-oracles.md  surrogates.md  variable-domains.md
docs/guides/: choosing-an-agent.md  configuring-samplers.md  contextual-bandits.md  design-spaces.md
examples/: 01_quickstart_branin.py  02_mixed_design_space.py  03_contextual_bandit.py  04_feel_good_ts.py
getting-started/: index.html
guides/choosing-an-agent/: index.html
guides/configuring-samplers/: index.html
guides/contextual-bandits/: index.html
guides/design-spaces/: index.html
optimisation_oracles/: gen_alg.py  sgld.py
optimisation_subroutines/: contextal_problem.py  objectives.py
sampling_oracles/: langevin_sampler.py  nuts_sampler.py  sampler.py
search/: search_index.json
src/banditry/: __init__.py  benchmark.py  constants.py  labels.py  logging_utils.py
src/banditry/agents/: __init__.py  agent.py  factory.py  ofugpagent.py  tsagent.py
src/banditry/optimisation_oracles/: __init__.py  gen_alg.py  sgld.py
src/banditry/optimisation_subroutines/: __init__.py  contextal_problem.py  contextual_problem.py  objectives.py
src/banditry/sampling_oracles/: __init__.py  langevin_sampler.py  nuts_sampler.py  sampler.py
src/banditry/surrogates/: __init__.py  gp.py  svgp.py  tsmodel.py
src/banditry/variable_domains/: __init__.py  design_space.py  parameter_types.py  transforms.py
src/pybandits/: __init__.py  constants.py  labels.py
src/pybandits/agents/: agent.py  factory.py  ofugpagent.py  tsagent.py
src/pybandits/optimisation_oracles/: gen_alg.py
src/pybandits/optimisation_subroutines/: contextal_problem.py  objectives.py
src/pybandits/sampling_oracles/: langevin_sampler.py  nuts_sampler.py  sampler.py
src/pybandits/surrogates/: gp.py  svgp.py  tsmodel.py
src/pybandits/variable_domains/: design_space.py
surrogates/: gp.py  svgp.py  tsmodel.py
tests/: conftest.py  test_agent_base.py  test_agents_smoke.py  test_design_space.py  test_factory.py  test_parameter_types.py
variable_domains/: design_space.py  parameter_types.py
