[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pybandits"
version = "0.1.0"
description = "Contextual bandit agents (GP-UCB and Thompson sampling) with GP surrogates, evolutionary acquisition optimisation, and Langevin/NUTS posterior sampling."
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0,<4",
    "torch>=2.0,<3",
    "gpytorch>=1.13,<2",
    "pymoo>=0.6.1,<0.7",
    "rich>=13,<16",
]

[project.optional-dependencies]
nuts = ["pyro-ppl>=1.8,<2"]

[tool.setuptools.packages.find]
where = ["src"]
