[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "banditry"
version = "0.2.0"
description = "Contextual bandit agents (GP-UCB and Thompson sampling) with GP surrogates, evolutionary acquisition optimisation, and Langevin/NUTS posterior sampling."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [
    { name = "Vahan Arsenyan" },
]
keywords = [
    "bandits",
    "contextual-bandits",
    "bayesian-optimisation",
    "gaussian-process",
    "thompson-sampling",
    "gp-ucb",
    "langevin-dynamics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0,<4",
    "torch>=2.0,<3",
    "gpytorch>=1.13,<2",
    "pymoo>=0.6.1,<0.7",
    "rich>=13,<16",
]

[project.optional-dependencies]
nuts = ["pyro-ppl>=1.8,<2"]
dev = ["pytest>=8", "ruff"]

[project.scripts]
banditry-bench = "banditry.benchmark:main"

[project.urls]
Repository = "https://github.com/VahanArsenian/banditry"
Issues = "https://github.com/VahanArsenian/banditry/issues"
Changelog = "https://github.com/VahanArsenian/banditry/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (e.g. NUTS smoke tests); deselect with -m 'not slow'",
]
